--- a/contacts.html
+++ b/contacts.html
@@ -56,6 +56,17 @@
   .btn-primary:hover {
     background-color: #2e7d32; /* Slightly darker green */
   }
+  .nav-link {
+  color: #475569;
+  font-weight: 500;
+  padding: 0.5rem 0.75rem;
+  border-radius: 0.375rem;
+  transition: background-color 0.2s ease, color 0.2s ease;
+}
+.nav-link:hover {
+  background-color: #E2E8F0;
+  color: #1E293B;
+}
   </style>
   </head>
 <body>
