--- a/projects.html
+++ b/projects.html
@@ -38,6 +38,17 @@ body {
   background-size: cover;
   background-position: center;
 }
+.nav-link {
+  color: #475569;
+  font-weight: 500;
+  padding: 0.5rem 0.75rem;
+  border-radius: 0.375rem;
+  transition: background-color 0.2s ease, color 0.2s ease;
+}
+.nav-link:hover {
+  background-color: #E2E8F0;
+  color: #1E293B;
+}
 </style>
 </head>
 <body class="bg-slate-50" style='font-family: Inter, "Noto Sans", sans-serif;'>
