--- a/skills.html
+++ b/skills.html
@@ -95,6 +95,19 @@
     background-color: #2e7d32; /* Slightly darker green */
   }
   </style>
+  <style>
+.nav-link {
+  color: #475569;
+  font-weight: 500;
+  padding: 0.5rem 0.75rem;
+  border-radius: 0.375rem;
+  transition: background-color 0.2s ease, color 0.2s ease;
+}
+.nav-link:hover {
+  background-color: #E2E8F0;
+  color: #1E293B;
+}
+  </style>
   </head>
 <body class="bg-slate-100" style="background-image: url('image/foto4.avif'); background-size: cover; background-position: center;">
 <div class="relative flex size-full min-h-screen flex-col group/design-root overflow-x-hidden">
