--- a/projects.html
+++ b/projects.html
@@ -51,27 +51,29 @@ body {
 }
 </style>
 </head>
-<body class="bg-slate-50" style='font-family: Inter, "Noto Sans", sans-serif;'>
-<div class="relative flex size-full min-h-screen flex-col group/design-root overflow-x-hidden">
+<body class="bg-slate-50" onpageshow="document.getElementById('menu-links')?.classList.add('hidden');">
+<div class="relative flex size-full min-h-screen flex-col group/design-root overflow-x-hidden" style='font-family: Inter, "Noto Sans", sans-serif;'>
 <!-- HEADER CON HAMBURGER SEMPRE VISIBILE -->
 <header class="shadow-md sticky top-0 z-[100]" style="color: black; background-color: transparent;">
-  <nav class="container mx-auto px-4 py-3 flex justify-between items-center">
-    <a class="text-black text-lg font-bold hover:opacity-80 transition-opacity" href="index.html">Home</a>
-    <div class="relative">
-      <button id="menu-btn" class="flex flex-col justify-center items-center w-10 h-10 z-50" aria-label="Open menu">
-        <span class="block w-6 h-0.5 bg-black mb-1 rounded transition-all"></span>
-        <span class="block w-6 h-0.5 bg-black mb-1 rounded transition-all"></span>
-        <span class="block w-6 h-0.5 bg-black rounded transition-all"></span>
+  <nav class="container mx-auto px-4 py-3 flex justify-between items-center sm:py-5">
+    <a class="text-black text-lg font-bold hover:opacity-80 transition-opacity sm:text-2xl sm:font-bold" href="index.html">Home</a>
+    <div class="relative ml-auto mr-2 sm:mr-4">
+      <button id="menu-btn"
+        class="flex flex-col justify-center items-center w-12 h-12 z-50 sm:w-10 sm:h-10"
+        aria-label="Open menu">
+        <span class="block w-7 h-1 bg-black mb-1.5 rounded transition-all sm:w-6 sm:h-0.5 sm:mb-1"></span>
+        <span class="block w-7 h-1 bg-black mb-1.5 rounded transition-all sm:w-6 sm:h-0.5 sm:mb-1"></span>
+        <span class="block w-7 h-1 bg-black rounded transition-all sm:w-6 sm:h-0.5"></span>
       </button>
     </div>
   </nav>
-  <div id="menu-links" class="hidden absolute top-0 left-1/2 -translate-x-1/2 mt-16 w-[90%] sm:w-[60%] max-w-lg bg-white/90 backdrop-blur-lg shadow-2xl rounded-xl z-40 p-6 flex-col space-y-3 transition-all duration-300">
+  <div id="menu-links" class="absolute top-0 left-1/2 -translate-x-1/2 mt-16 w-[98%] max-w-xs bg-white/90 backdrop-blur-lg shadow-2xl rounded-xl z-40 p-6 flex-col space-y-3 transition-all duration-300 sm:mt-20 sm:w-[60%] sm:max-w-lg">
     <a class="nav-link w-full text-left block" href="about-me.html">About Me</a>
     <a class="nav-link w-full text-left block" href="skills.html">Skills</a>
     <a class="nav-link w-full text-left block" href="projects.html">Projects</a>
     <a class="nav-link w-full text-left block" href="contacts.html">Contact</a>
     <a class="nav-link w-full text-left block" href="image/Certificazione_Generation.pdf" target="_blank">Certification</a>
-    <a class="nav-link w-full text-left block" href="image/CV.pdf" target="_blank">Curriculum</a>
+    <a class="nav-link w-full text-left block" href="image/CV_Giorgia_Spina_JuniorDataEngineer.pdf" target="_blank">Curriculum</a>
   </div>
 </header>
 <div class="flex items-center bg-white p-4 pb-2 justify-between sticky top-0 z-10 shadow-sm">
@@ -159,13 +161,27 @@ body {
 <script>
   const menuBtn = document.getElementById('menu-btn');
   const menuLinks = document.getElementById('menu-links');
+
+  function closeMenu() {
+    menuLinks.classList.add('hidden');
+  }
+
   menuBtn.addEventListener('click', () => {
     menuLinks.classList.toggle('hidden');
   });
+
   document.addEventListener('click', (e) => {
     if (!menuBtn.contains(e.target) && !menuLinks.contains(e.target)) {
-      menuLinks.classList.add('hidden');
+      closeMenu();
     }
   });
+
+  // Chiudi il menu quando si clicca su un link del menu
+  menuLinks.querySelectorAll('a').forEach(link => {
+    link.addEventListener('click', closeMenu);
+  });
+
+  // Chiudi il menu ogni volta che la pagina viene caricata/mostrata (anche da navigazione browser)
+  window.addEventListener('pageshow', closeMenu);
 </script>
 </body></html>
